--- a/pom.xml
+++ b/pom.xml
@@ -1,61 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.ztv.anmeldetool</groupId>
-	<artifactId>anmeldetool-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.ztv.anmeldetool</groupId>
+  <artifactId>anmeldetool-parent</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.5.3</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
 
-	<properties>
-		<java.version>21</java.version>
-	</properties>
-	<scm>
-		<developerConnection>
-        scm:git:git@github.com:HeinzLaetsch/ZTV_GETU_Anmeldetool.git
+  <properties>
+    <java.version>21</java.version>
+  </properties>
+  <scm>
+    <developerConnection>
+      scm:git:git@github.com:HeinzLaetsch/ZTV_GETU_Anmeldetool.git
     </developerConnection>
-	</scm>
+  </scm>
 
-	<dependencyManagement>
-		<dependencies></dependencies>
-	</dependencyManagement>
+  <dependencyManagement>
+    <dependencies></dependencies>
+  </dependencyManagement>
 
-	<build>
-		<plugins>
-			<plugin>
-            	<groupId>org.openrewrite.maven</groupId>
-            	<artifactId>rewrite-maven-plugin</artifactId>
-            	<version>6.16.0</version>
-    			<configuration>
-        			<exportDatatables>true</exportDatatables>
-        			<activeRecipes>
-            			<recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_4</recipe>
-        			</activeRecipes>
-    			</configuration>
-    			<dependencies>
-        			<dependency>
-            			<groupId>org.openrewrite.recipe</groupId>
-            			<artifactId>rewrite-migrate-java</artifactId>
-            			<version>3.15.0</version>
-        			</dependency>
-        			<dependency>
-            			<groupId>org.openrewrite.recipe</groupId>
-            			<artifactId>rewrite-spring</artifactId>
-            			<version>6.12.0</version>
-        			</dependency>
-    			</dependencies>
-        	</plugin>
-		</plugins>
-	</build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.openrewrite.maven</groupId>
+        <artifactId>rewrite-maven-plugin</artifactId>
+        <version>6.16.0</version>
+        <configuration>
+          <exportDatatables>true</exportDatatables>
+          <activeRecipes>
+            <recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_4</recipe>
+          </activeRecipes>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-migrate-java</artifactId>
+            <version>3.15.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-spring</artifactId>
+            <version>6.12.0</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
+  </build>
 
-	<modules>
-		<module>anmeldetool-web</module>
-		<module>anmeldetool-server</module>
-        <module>TestSecurity</module>
-    </modules>
+  <modules>
+    <module>anmeldetool-web</module>
+    <module>anmeldetool-server</module>
+  </modules>
 </project>
